chore: work in progress

--- a/node-red/Dockerfile
+++ b/node-red/Dockerfile
@@ -1,9 +1,8 @@
 FROM nodered/node-red:1.0.6
 
 # copy node-red project files into place
-COPY weather-bot/flow.json /data/flows.json
-COPY weather-bot/flow_cred.json /data/flows_cred.json
-COPY weather-bot/package.json /data/package.json
+COPY weather-dashboard/flows_linux.fritz.box.json /data/flows.json
+COPY weather-dashboard/package.json /data/package.json
 COPY settings.js /data/settings.js
 
 RUN npm i node-red-contrib-influxdb@0.4.0
