--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -5,7 +5,12 @@ services:
     ports:
       - "127.0.0.1:1881:1880"
     restart: always
-    user: root
     environment:
       OWM_ID: <your openweathermap appid here>
- 
+  influxdb:
+    image: "influxdb:1.8.0"
+    restart: always
+    expose:
+      - 8086
+    volumes:
+      - ./influxdb/db:/var/lib/influxdb
