--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ node-red/weather-dashboard/.config.json.backup
 node-red/weather-dashboard/.flows.json.backup
 node-red/weather-dashboard/flows.json.backup
 node-red/weather-dashboard/.config.json
+influxdb/db
+
